--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="quiz_progress_text">Este é o esporte %1$d de %2$d</string>
+    <string name="quiz_progress_text">Esporte %1$d de %2$d</string>
     <string name="results_text">%1$d tentativas e %2$d acertos (%3$.02f%%)</string>
     <string name="reset_quiz">Reiniciar a quiz dos esportes</string>
 </resources>
